--- a/Ethereal Cloud/Pages/Index.cshtml
+++ b/Ethereal Cloud/Pages/Index.cshtml
@@ -1,13 +1,30 @@
 ﻿@page
 @model Ethereal_Cloud.Pages.LoginSignupModel
 @{
-    ViewBag.Title = "Home";
-    Layout = "Shared/_Layout.cshtml";
-    <link rel="stylesheet" href="/css/Index.css" asp-append-version="true">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="/css/Site.css" asp-append-version="true">
+    <title>Home</title>
+    Layout = null;
+    <link rel="stylesheet" href="/css/Login.css" asp-append-version="true">
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <!-- Logo on left side -->
+            <div class="navbar-brand">
+                <img src="~/images/LogoVector.svg" alt="logo" class="logo">
+            </div>
+        </div>
+    </nav>
+
+    <div class="text-center p-3">
+        <h3 style="text-align:center;"><b>Welcome</b></h3>
+        <p style="text-align:center;">Home page where there will be more information about the website and what it is</p>
+        <p>Login below to use our cloud storage website to store and share files</p>
+        <button></button>
+
+    </div>
 }
-
-<div class="text-center p-3">
-    <h3 style="text-align:center;"><b>Welcome</b></h3>
-    <p style="text-align:center;">Home page where there will be more information about the website and what it is</p>
-
-</div>
