--- a/Ethereal Cloud/Pages/Register.cshtml
+++ b/Ethereal Cloud/Pages/Register.cshtml
@@ -1,132 +1,148 @@
 ﻿@page
 @model Ethereal_Cloud.Pages.RegisterModel
 @{
-    ViewBag.Title = "Register";
-    Layout = "Shared/_Layout.cshtml";
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="/css/Site.css" asp-append-version="true">
+    <title>Register</title>
+    Layout = null;
     <link rel="stylesheet" href="/css/Login.css" asp-append-version="true">
-}
 
-<div class="main">
-    <div class="login-container align-items-center">
-        <h2>Register</h2>
-
-        <!-- Success/error messages -->
-        <div class="popup-message">
-            @if (Model.errornum == -1) { }
-
-            @if (Model.errornum == 0)
-            {
-                <!-- Success Alert -->
-                <div class="alert alert-success alert-dismissible fade show mx-auto">
-                    <strong>Success!</strong> You have successfully registered.
-                    <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-                </div>
-            }
-
-            @if (Model.errornum == 1)
-            {
-                <!-- Error Alert -->
-                <div class="alert alert-danger alert-dismissible fade show mx-auto">
-                    <strong>Error!</strong> Username or Email already exists.
-                    <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-                </div>
-            }
-
-            @if (Model.errornum == 2)
-            {
-                <!-- Error Alert -->
-                <div class="alert alert-danger alert-dismissible fade show mx-auto" id="popup">
-                    <strong>Error!</strong> Your passwords must match in both inputs
-                    <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-                </div>
-            }
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <!-- Logo on left side -->
+            <div class="navbar-brand">
+                <img src="~/images/LogoVector.svg" alt="logo" class="logo">
+            </div>
         </div>
+    </nav>
 
-        <!-- Register form -->
-        <div class="signup">
-            <form method="post" asp-page-handler="Signup">
+    <div class="main">
+        <div class="login-container align-items-center">
+            <h2>Register</h2>
 
-                <!-- Username field -->
-                <div class="form-floating">
-                    <input id="username" class="form-control" name="username" placeholder=" " required>
-                    <label for="username">Username</label>
-                </div>
+            <!-- Success/error messages -->
+            <div class="popup-message">
+                @if (Model.errornum == -1) { }
 
-                <!-- Email field -->
-                <div class="form-floating">
-                    <input type="email" class="form-control" id="email" placeholder=" " name="email" required>
-                    <label for="email">Email</label>
-                </div>
-
-                <!-- Password field -->
-                <div class="form-floating">
-                    <input type="password" class="form-control" name="Password" placeholder=" " id="Password" required>
-                    <label for="password">Password</label>
-                </div>
-
-                <!-- Confirm password field -->
-                <div class="form-floating">
-                    <input type="password" class="form-control" id="PasswordConf" placeholder=" " name="PasswordConf" required>
-                    <label for="password">Confirm Password</label>
-                    <span class="password-toggle" onclick="togglePassword()">Show</span>
-                </div>
-
-                <!-- Terms and conditions form -->
-                <div class="mb-3">
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="termsCheckbox" name="termsCheckbox" disabled>
-                        <label class="form-check-label">
-                            I have read and agree to the <a href="#" onclick="openTermsWindow(); enableCheckbox();">terms and conditions</a>
-                        </label>
+                @if (Model.errornum == 0)
+                {
+                    <!-- Success Alert -->
+                    <div class="alert alert-success alert-dismissible fade show mx-auto">
+                        <strong>Success!</strong> You have successfully registered.
+                        <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
                     </div>
-                </div>
+                }
 
-                <!-- Submit button -->
-                <div class="mb-3">
-                    <button type="submit" id="button2" class="btn btn-primary" onclick="return validateForm();">Register</button>
-                </div>
+                @if (Model.errornum == 1)
+                {
+                    <!-- Error Alert -->
+                    <div class="alert alert-danger alert-dismissible fade show mx-auto">
+                        <strong>Error!</strong> Username or Email already exists.
+                        <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+                    </div>
+                }
 
-                <div class="mb-3">
-                    Already have an account?
-                    <a href="/Login" class="text-primary">Sign In</a>
-                </div>
-            </form>
+                @if (Model.errornum == 2)
+                {
+                    <!-- Error Alert -->
+                    <div class="alert alert-danger alert-dismissible fade show mx-auto" id="popup">
+                        <strong>Error!</strong> Your passwords must match in both inputs
+                        <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+                    </div>
+                }
+            </div>
+
+            <!-- Register form -->
+            <div class="signup">
+                <form method="post" asp-page-handler="Signup">
+
+                    <!-- Username field -->
+                    <div class="form-floating">
+                        <input id="username" class="form-control" name="username" placeholder=" " required>
+                        <label for="username">Username</label>
+                    </div>
+
+                    <!-- Email field -->
+                    <div class="form-floating">
+                        <input type="email" class="form-control" id="email" placeholder=" " name="email" required>
+                        <label for="email">Email</label>
+                    </div>
+
+                    <!-- Password field -->
+                    <div class="form-floating">
+                        <input type="password" class="form-control" name="Password" placeholder=" " id="Password" required>
+                        <label for="password">Password</label>
+                    </div>
+
+                    <!-- Confirm password field -->
+                    <div class="form-floating">
+                        <input type="password" class="form-control" id="PasswordConf" placeholder=" " name="PasswordConf" required>
+                        <label for="password">Confirm Password</label>
+                        <span class="password-toggle" onclick="togglePassword()">Show</span>
+                    </div>
+
+                    <!-- Terms and conditions form -->
+                    <div class="mb-3">
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="checkbox" id="termsCheckbox" name="termsCheckbox" disabled>
+                            <label class="form-check-label">
+                                I have read and agree to the <a href="#" onclick="openTermsWindow(); enableCheckbox();">terms and conditions</a>
+                            </label>
+                        </div>
+                    </div>
+
+                    <!-- Submit button -->
+                    <div class="mb-3">
+                        <button type="submit" id="login-btn" class="btn btn-primary" onclick="return validateForm();">Register</button>
+                    </div>
+
+                    <div class="mb-3">
+                        Already have an account?
+                        <a href="/Login" class="text-primary">Login</a>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
-</div>
 
-<script>
-    // Toggle button to show passwords
-    function togglePassword() {
-        const passwordInput1 = document.getElementById('Password');
-        const passwordInput2 = document.getElementById('PasswordConf');
-        passwordInput1.type = (passwordInput1.type === 'password') ? 'text' : 'password';
-        passwordInput2.type = (passwordInput2.type === 'password') ? 'text' : 'password';
-    }
-
-    // Logger for errors
-    var logger = '@ViewData["logger"]';
-    if (logger !== null) {
-        console.log(logger);
-    }
-
-    function openTermsWindow() {
-        var termsUrl = "/TermsAndConditions";
-        window.open(termsUrl, "_blank", "width=800,height=600");
-    }
-
-    function enableCheckbox() {
-        var checkbox = document.getElementById('termsCheckbox');
-        checkbox.removeAttribute('disabled');
-        checkbox.setAttribute('required', true);
-    }
-
-    function validateForm() {
-        var checkbox = document.getElementById('termsCheckbox');
-        if (!checkbox.checked) {
-            alert("Please agree to the terms and conditions.");
-            return false;
+    <script>
+        // Toggle button to show passwords
+        function togglePassword() {
+            const passwordInput1 = document.getElementById('Password');
+            const passwordInput2 = document.getElementById('PasswordConf');
+            passwordInput1.type = (passwordInput1.type === 'password') ? 'text' : 'password';
+            passwordInput2.type = (passwordInput2.type === 'password') ? 'text' : 'password';
         }
-        return true;
-    }
-</script>
+
+        // Logger for errors
+        var logger = '@ViewData["logger"]';
+        if (logger !== null) {
+            console.log(logger);
+        }
+
+        function openTermsWindow() {
+            var termsUrl = "/TermsAndConditions";
+            window.open(termsUrl, "_blank", "width=800,height=600");
+        }
+
+        function enableCheckbox() {
+            var checkbox = document.getElementById('termsCheckbox');
+            checkbox.removeAttribute('disabled');
+            checkbox.setAttribute('required', true);
+        }
+
+        function validateForm() {
+            var checkbox = document.getElementById('termsCheckbox');
+            if (!checkbox.checked) {
+                alert("Please agree to the terms and conditions.");
+                return false;
+            }
+            return true;
+        }
+    </script>
+}
