--- a/Ethereal Cloud/Pages/Upload.cshtml
+++ b/Ethereal Cloud/Pages/Upload.cshtml
@@ -23,7 +23,7 @@
 
             <!-- New folder button -->
             <div id="tool-row">
-                <a id="tool-label" asp-page-handler="Createfolder" asp-route-foldername="temp">
+                <a id="tool-label" href="#" onclick="showInputBox()">
                     <img class="row" src="~/images/tools/folder-plus.svg" alt="new-folder">
                 </a>
                 <p class="row">New</p>
@@ -134,6 +134,38 @@
         </div>
     </form>
 </div>
+
+
+
+<!--NEW FOLDER INPUT BOX-->
+
+<!-- Hidden input box -->
+<div id="input-box" style="display:none;">
+    <form id="folder-form" method="post" asp-page-handler="Createfolder">
+        <input type="text" name="foldername" required />
+        <input type="submit" value="Submit" />
+    </form>
+</div>
+
+<script>
+    function showInputBox() {
+        // Show the input box
+        document.getElementById('input-box').style.display = 'block';
+
+        // Set focus on the input field
+        document.querySelector('#input-box input[name="foldername"]').focus();
+    }
+</script>
+
+
+
+
+
+
+
+
+
+
 
 @{
     <!-- Console logger -->
