--- a/Ethereal Cloud/Pages/Login.cshtml
+++ b/Ethereal Cloud/Pages/Login.cshtml
@@ -26,13 +26,18 @@
 
             <!-- Success/error messages -->
             <div class="popup-message">
-                @if (Model.errornum == -1) { }
-
-                @if (Model.errornum == 0)
+                <!-- Success/error messages -->
+                @if (ViewData["SuccessMessage"] != null)
                 {
-                    <!-- Error Alert -->
-                    <div class="alert alert-danger alert-dismissible fade show mx-auto" id="popup">
-                        <strong>Error!</strong> The username or password is incorrect
+                    <div class="alert alert-success alert-dismissible fade show mx-auto">
+                        <strong>Success!</strong> @ViewData["SuccessMessage"]
+                        <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+                    </div>
+                }
+                @if (ViewData["FailureMessage"] != null)
+                {
+                    <div class="alert alert-danger alert-dismissible fade show mx-auto">
+                        <strong>Error!</strong> @ViewData["FailureMessage"]
                         <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
                     </div>
                 }
@@ -43,15 +48,17 @@
 
                 <!-- Username field -->
                 <div class="form-floating">
-                    <input asp-for="loginDetails.UsernameOrEmail" class="form-control" placeholder=" " required>
+                    <input asp-for="loginDetails.UsernameOrEmail" class="form-control" placeholder=" ">
                     <label for="email">Email</label>
+                    <span asp-validation-for="loginDetails.UsernameOrEmail" class="text-danger"></span>
                 </div>
 
                 <!-- Password field -->
                 <div class="form-floating">
-                    <input type="password" asp-for="loginDetails.Password" class="form-control" placeholder=" " required>
+                    <input type="password" id="Password" asp-for="loginDetails.Password" class="form-control" placeholder=" ">
                     <label for="password">Password</label>
                     <span class="password-toggle" onclick="togglePassword()">Show</span>
+                    <span asp-validation-for="loginDetails.Password" class="text-danger"></span>
                 </div>
 
                 <div class="mb-3">
