--- a/Ethereal Cloud/Pages/Register.cshtml
+++ b/Ethereal Cloud/Pages/Register.cshtml
@@ -27,31 +27,17 @@
 
             <!-- Success/error messages -->
             <div class="popup-message">
-                @if (Model.errornum == -1) { }
-
-                @if (Model.errornum == 0)
+                @if (ViewData["SuccessMessage"] != null)
                 {
-                    <!-- Success Alert -->
                     <div class="alert alert-success alert-dismissible fade show mx-auto">
-                        <strong>Success!</strong> You have successfully registered.
+                        <strong>Success!</strong> @ViewData["SuccessMessage"]
                         <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
                     </div>
                 }
-
-                @if (Model.errornum == 1)
+                @if (ViewData["FailureMessage"] != null)
                 {
-                    <!-- Error Alert -->
                     <div class="alert alert-danger alert-dismissible fade show mx-auto">
-                        <strong>Error!</strong> Username or Email already exists.
-                        <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-                    </div>
-                }
-
-                @if (Model.errornum == 2)
-                {
-                    <!-- Error Alert -->
-                    <div class="alert alert-danger alert-dismissible fade show mx-auto" id="popup">
-                        <strong>Error!</strong> Your passwords must match in both inputs
+                        <strong>Error!</strong> @ViewData["FailureMessage"]
                         <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
                     </div>
                 }
@@ -63,26 +49,30 @@
 
                     <!-- Username field -->
                     <div class="form-floating">
-                        <input asp-for="signupDetails.Username" class="form-control" placeholder=" " required>
+                        <input asp-for="signupDetails.Username" class="form-control" placeholder=" ">
                         <label for="username">Username</label>
+                        <span asp-validation-for="signupDetails.Username" class="text-danger"></span>
                     </div>
 
                     <!-- Email field -->
                     <div class="form-floating">
-                        <input type="email" asp-for="signupDetails.Email" class="form-control" placeholder=" " required>
+                        <input type="email" asp-for="signupDetails.Email" class="form-control" placeholder=" ">
                         <label for="email">Email</label>
+                        <span asp-validation-for="signupDetails.Email" class="text-danger"></span>
                     </div>
 
                     <!-- Password field -->
                     <div class="form-floating">
-                        <input type="password" id="PasswordConf" asp-for="signupDetails.Password" class="form-control" placeholder=" " required>
+                        <input type="password" id="Password" asp-for="signupDetails.Password" class="form-control" placeholder=" ">
                         <label for="password">Password</label>
+                        <span asp-validation-for="signupDetails.Password" class="text-danger"></span>
                     </div>
 
                     <!-- Confirm password field -->
                     <div class="form-floating">
-                        <input type="password" id="PasswordConf" asp-for="signupDetails.PasswordConf" class="form-control" placeholder=" " required>
+                        <input type="password" id="PasswordConf" asp-for="signupDetails.PasswordConf" class="form-control" placeholder=" ">
                         <label for="password">Confirm Password</label>
+                        <span asp-validation-for="signupDetails.PasswordConf" class="text-danger"></span>
                         <span class="password-toggle" onclick="togglePassword()">Show</span>
                     </div>
 
